# myceliumflut

./: .gitignore  README.md  pubspec.yaml
.github/workflows/: android_build.yml  android_release.yml  flutter_ios.yml  ios_build.yml  macos_build.yml  windows_build.yaml
android/: .gitignore
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/myceliumflut/: MainActivity.kt
android/app/src/main/kotlin/tech/threefold/mycelium/: BootReceiver.kt  MainActivity.kt  NetworkStateCallback.kt  PreferencesManager.kt  TunService.kt
android/app/src/main/kotlin/tech/threefold/mycelium/rust/uniffi/mycelmob/: mycelmob.kt
docs/: android.md
files/: windows_installer.iss
installers/dmg_creator/: app_icon.icns  config.json
installers/windows/: myceliumflut_innosetup.iss  prepare.bat
integration_test/: simple_test.dart
ios/: .gitignore  README.md  build-mycelios.sh
ios/MyceliumTunnel/: MyceliumTunnel-Bridging-Header.h  MyceliumTunnel.entitlements  PacketTunnelProvider.h  PacketTunnelProvider.swift
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner.xcodeproj/xcshareddata/xcschemes/: MyceliumTunnel.xcscheme
ios/mycelios/: Cargo.toml
ios/mycelios/src/: lib.rs
lib/: main.dart  myceliumflut_ffi_binding.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: simple.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/MyceliumTunnel/: Info.plist  MyceliumTunnel-Bridging-Header.h  MyceliumTunnel.entitlements  PacketTunnelProvider.h  PacketTunnelProvider.swift  main.swift
macos/Runner/: AppDelegate.swift  DebugProfile.entitlements  Info.plist  MainFlutterWindow.swift  Release.entitlements  RunnerDebug.entitlements  mycelmob.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
mycelffi/: Cargo.toml  build.bat
mycelffi/src/: lib.rs
mycelmob/: .gitignore  Cargo.toml  README.md  build-android.sh  build-ios.sh  build-mac.sh
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_myceliumflut.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_myceliumflut.podspec
rust_builder/windows/: CMakeLists.txt
test/: peers_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
