[package]
name = "mycelmob"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["cdylib", "staticlib"]
name = "mycelmob"

[dependencies]
uniffi = { version = "0.27.3", features = ["cli"] }
mobile = { git = "http://github.com/threefoldtech/mycelium", package = "mobile", tag = "v0.5.6", features = [
    "mactunfd",
] }
#mobile = { path = "../../mycelium/mobile" }

[build-dependencies]
uniffi = { version = "0.27.3", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
