[package]
name = "rust_lib_myceliumflut"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.32"
mobile = {git = "http://github.com/threefoldtech/mycelium", package = "mobile", rev = "55fe56d7a4b4dc2c1bc46208581ccc5ff576290c"}
#mobile = {path = "../../mycelium/mobile"}
log = {version = "0.4.21"}

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"

