[package]
name = "rust_lib_myceliumflut"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.32"
mobile = {git = "http://github.com/threefoldtech/mycelium", package = "mobile", rev = "46ae4cabfbfc799e9178018c92cf9905092f5d75"}
#mobile = {path = "../../mycelium/mobile"}
log = {version = "0.4.21"}

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"

