[package]
name = "mycelios"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["cdylib", "staticlib"]
name = "mycelios"

[dependencies]
uniffi = { version = "0.27.1", features = [ "cli" ] }
mobile = {git = "http://github.com/threefoldtech/mycelium", package = "mobile", rev = "55fe56d7a4b4dc2c1bc46208581ccc5ff576290c"}
#mobile = {path = "../../../mycelium/mobile"}

[build-dependencies]
uniffi = { version = "0.27.1", features = [ "build" ] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"