[package]
name = "mycelios"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["cdylib", "staticlib"]
name = "mycelios"

[dependencies]
uniffi = { version = "0.27.1", features = [ "cli" ] }
mobile = {git = "http://github.com/threefoldtech/mycelium", package = "mobile", rev = "51402254b79ccfe5dc6581b8935620440511b115"}
#mobile = {path = "../../../mycelium/mobile"}

[build-dependencies]
uniffi = { version = "0.27.1", features = [ "build" ] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"